2004-11-10  Kevin Layer  <layer@relay.known.net>

	* Makefile:
	- the start of rpm build support
	- batch mode to compile
	* greyadmin.cl: kill warning

2003-08-04  root  <root@gills.dancysoft.com>

	* Be polite after doing POP auth (use QUIT command)

	* Added code for POP authentication.

	* Add list of auto-whitelisted triples that have never passed any
	messages.

2003-07-24  root  <root@gemini>

	* Show individual and global stats.  Shows lists of currently
	blocked deliveries and provides a way for quick whitelisting.
	
2003-07-23  root  <root@gills.dancysoft.com>

	* New adminstration web thingy