@@ -1,0 +1,6 @@
+<ga_with-wrapper superonly=t>
+<wa_showerrors name="error" session/>
+<form name="adminform" action="impersonate" method="post">
+<input type=text name=login> <input type=submit value=Impersonate> <br>
+</form>
+</ga_with-wrapper>
